# hw-web-11

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 71fb3f4ccf8b_user_new_field.py  a5b104b314c5_init.py  b6eaa87b12ff_init.py
docs/: conf.py  index.rst
migrations/versions/: 8e4a34812429_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_confirm.html
src/settings/: settings.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
